CPP_BSQH_dll_MR_Shin/Dll_Implement_Test/Dll_Implement_Test/DP173_Initial_Fast_OC_Related.h

extern "C" __declspec (dllexport )  void Get_Initial_Gamma_Fx_3points_Combine_Points_2(double Combine_Lv_Ratio,int Dec_AM1_R, int Dec_AM1_G, int Dec_AM1_B, int& Gamma_R, int& Gamma_G, int& Gamma_B, bool* Selected_Band, int* Band_Gray_Gamma_Red, int* Band_Gray_Gamma_Green, int* Band_Gray_Gamma_Blue, double* Band_Gray_Target_Lv, int Current_Band_Dec_Vreg1,
            int* Band_Vreg1_Dec, int band, int gray, double Target_Lv, double Prvious_Gray_Gamma_R_Voltage, double Prvious_Gray_Gamma_G_Voltage, double Prvious_Gray_Gamma_B_Voltage,
            double Voltage_VREG1_REF2047, double Voltage_VREG1_REF1635, double Voltage_VREG1_REF1227, double Voltage_VREG1_REF815, double Voltage_VREG1_REF407, double Voltage_VREG1_REF63, double Voltage_VREG1_REF1
            , double Fx_3points_Combine_LV_1, double Fx_3points_Combine_LV_2, double Fx_3points_Combine_LV_3, double Fx_3points_Combine_Lv_Distance);