CPP_BSQH_dll_MR_Shin/Make_Dll/BSQH_dll_MR_Shin/BSQH_MR_SHIN_Algorithm.h

extern "C" __declspec (dllexport ) char* Get_Dll_Information();
//Add Extension_X/Y 
//Add Infinite_Count
//Add loop_count (19/04/20)
extern "C" __declspec (dllexport ) void Sub_Compensation(int loop_count,bool Infinite_Loop,int& Infinite_Count,int &Gamma_R,
	int &Gamma_G,int &Gamma_B,double Measure_X,double Measure_Y,double Measure_Lv,double Target_X,double Target_Y,double Target_Lv
,double Limit_X,double Limit_Y,double Limit_Lv,double Extension_X,double Extension_Y, 
int Gamma_Register_Limit,bool &Gamma_Out_Of_Register_Limit,bool &Within_Spec_Limit);
extern "C" __declspec (dllexport) void Init_Algorithm_Applied_Sub_Compensation(int loop_count, bool Infinite_Loop, int& Infinite_Count, int& Gamma_R,
	int& Gamma_G, int& Gamma_B, double Measure_X, double Measure_Y, double Measure_Lv, double Target_X, double Target_Y, double Target_Lv
	, double Limit_X, double Limit_Y, double Limit_Lv, double Extension_X, double Extension_Y,
	int Gamma_Register_Limit, bool& Gamma_Out_Of_Register_Limit, bool& Within_Spec_Limit);
//Add Vreg1_Infinite_Loop : Color Coordinate Infinite Loop Check (R/B) 
//Add Extension_X/Y 
//Add Vreg1_Infinite_Count
//Add loop_count (19/04/20)
extern "C" __declspec (dllexport ) void Vreg1_Compensation(int loop_count,bool Vreg1_Infinite_Loop,int Vreg1_Infinite_Count,
	int &Gamma_R,int &Vreg1,int &Gamma_B,double Measure_X,double Measure_Y,double Measure_Lv,double Target_X,double Target_Y,double Target_Lv
,double Limit_X,double Limit_Y,double Limit_Lv,double Extension_X,double Extension_Y 
, int Gamma_Register_Limit , int Vreg1_Register_Limit ,bool &Gamma_Or_Vreg1_Out_Of_Register_Limit,bool &Within_Spec_Limit);